# plagiarism-detector

./: .gitignore  CMakeLists.txt  README.md
include/: checker.h  patchwork_detector.h  reporter.h  suffix_tree.h  tokenizer.h
samples/: sample_a.cpp  sample_b.cpp  sample_c.cpp
src/: checker.cpp  main.cpp  patchwork_detector.cpp  reporter.cpp  suffix_tree.cpp  tokenizer.cpp
